testsuite/tests/parse-errors/unclosed_class_simpl_expr3.compilers.reference
File "unclosed_class_simpl_expr3.ml", line 9, characters 0-0:
Error: Syntax error: ) expected
File "unclosed_class_simpl_expr3.ml", line 8, characters 10-11:
8 | class c = (object end
              ^
  This ( might be unmatched
